--- a/starter/index.html
+++ b/starter/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>JS Bases - Les boucles</h1>
-        <script src="script.js"></script>
+        <script src="./boucles-p3-fizzBuzz.js"></script>
     </body>
 </html>
